WIP: Migrate to Go
Signed-off-by: William Brawner <me@wbrawner.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,16 @@
-HELP.md
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+twigs
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Test binary, built with `go test -c`
+*.test
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-/build/
-
-### VS Code ###
+# VS Code
 .vscode/
-.gradle
-*.sql
